Compiler_F74056043_HW2/y.output
   0  $accept : program $end

   1  program : program transition
   2          | transition

   3  transition : func
   4             | stat

   5  func : type ID '(' argument_list ')' compound_stat
   6       | type ID '(' ')' compound_stat
   7       | type ID '(' argument_list ')' SEMICOLON
   8       | type ID '(' ')' SEMICOLON

   9  func_name : ID

  10  argument_list : argument_list ',' argument
  11                | argument

  12  argument : type ID

  13  type : INT
  14       | FLOAT
  15       | BOOL
  16       | STRING
  17       | VOID

  18  $$1 :

  19  compound_stat : '{' $$1 block_list '}'
  20                | '{' '}'

  21  block_list : block_list block_item
  22             | block_item

  23  block_item : declaration
  24             | stat

  25  stat : declaration
  26       | loop
  27       | expression_stat
  28       | return_stat
  29       | print_func
  30       | select
  31       | func_call

  32  $$2 :

  33  func_call : ID $$2 '(' para_list ')' SEMICOLON

  34  $$3 :

  35  func_call : ID $$3 '(' ')' SEMICOLON

  36  para_list : para_list ',' or_expression
  37            | or_expression

  38  return_stat : RETURN or_expression SEMICOLON

  39  expression_stat : expression SEMICOLON

  40  loop : WHILE '(' expression ')' compound_stat

  41  select : IF '(' expression ')' compound_stat
  42         | IF '(' expression ')' compound_stat ELSE compound_stat

  43  expression : or_expression
  44             | ID assign_symbol or_expression

  45  assign_symbol : '='
  46                | ADDASGN
  47                | SUBASGN
  48                | MULASGN
  49                | DIVASGN
  50                | MODASGN

  51  or_expression : and_expression
  52                | or_expression OR and_expression

  53  and_expression : equal_expression
  54                 | and_expression AND equal_expression

  55  equal_expression : relation_expression
  56                   | equal_expression EQ relation_expression
  57                   | equal_expression NE relation_expression

  58  relation_expression : add_expression
  59                      | relation_expression '>' add_expression
  60                      | relation_expression '<' add_expression
  61                      | relation_expression MTE add_expression
  62                      | relation_expression LTE add_expression

  63  add_expression : multi_expression
  64                 | add_expression '+' multi_expression
  65                 | add_expression '-' multi_expression

  66  multi_expression : unary_expression
  67                   | multi_expression '*' unary_expression
  68                   | multi_expression '/' unary_expression
  69                   | multi_expression '%' unary_expression

  70  unary_expression : postfix_expression
  71                   | INC unary_expression
  72                   | DEC unary_expression
  73                   | NOT unary_expression

  74  postfix_expression : simple_expression
  75                     | postfix_expression INC
  76                     | postfix_expression DEC

  77  simple_expression : const
  78                    | ID

  79  declaration : type ID '=' initialzer SEMICOLON
  80              | type ID SEMICOLON

  81  initialzer : or_expression

  82  const : I_CONST
  83        | F_CONST
  84        | '"' STR_CONST '"'
  85        | TRUE
  86        | FALSE

  87  $$4 :

  88  print_func : PRINT '(' ID $$4 ')' SEMICOLON
  89             | PRINT '(' '"' STR_CONST '"' ')' SEMICOLON

state 0
	$accept : . program $end  (0)

	PRINT  shift 1
	IF  shift 2
	WHILE  shift 3
	RETURN  shift 4
	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	VOID  shift 12
	INT  shift 13
	FLOAT  shift 14
	BOOL  shift 15
	STRING  shift 16
	ID  shift 17
	'"'  shift 18
	.  error

	program  goto 19
	stat  goto 20
	type  goto 21
	transition  goto 22
	func  goto 23
	declaration  goto 24
	loop  goto 25
	expression_stat  goto 26
	return_stat  goto 27
	print_func  goto 28
	select  goto 29
	func_call  goto 30
	or_expression  goto 31
	expression  goto 32
	and_expression  goto 33
	equal_expression  goto 34
	relation_expression  goto 35
	add_expression  goto 36
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 1
	print_func : PRINT . '(' ID $$4 ')' SEMICOLON  (88)
	print_func : PRINT . '(' '"' STR_CONST '"' ')' SEMICOLON  (89)

	'('  shift 42
	.  error


state 2
	select : IF . '(' expression ')' compound_stat  (41)
	select : IF . '(' expression ')' compound_stat ELSE compound_stat  (42)

	'('  shift 43
	.  error


state 3
	loop : WHILE . '(' expression ')' compound_stat  (40)

	'('  shift 44
	.  error


state 4
	return_stat : RETURN . or_expression SEMICOLON  (38)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	or_expression  goto 46
	and_expression  goto 33
	equal_expression  goto 34
	relation_expression  goto 35
	add_expression  goto 36
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 5
	unary_expression : INC . unary_expression  (71)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	unary_expression  goto 47
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 6
	unary_expression : DEC . unary_expression  (72)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	unary_expression  goto 48
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 7
	unary_expression : NOT . unary_expression  (73)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	unary_expression  goto 49
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 8
	const : I_CONST .  (82)

	.  reduce 82


state 9
	const : F_CONST .  (83)

	.  reduce 83


state 10
	const : TRUE .  (85)

	.  reduce 85


state 11
	const : FALSE .  (86)

	.  reduce 86


state 12
	type : VOID .  (17)

	.  reduce 17


state 13
	type : INT .  (13)

	.  reduce 13


state 14
	type : FLOAT .  (14)

	.  reduce 14


state 15
	type : BOOL .  (15)

	.  reduce 15


state 16
	type : STRING .  (16)

	.  reduce 16


17: reduce/reduce conflict (reduce 32, reduce 34) on '('
state 17
	func_call : ID . $$2 '(' para_list ')' SEMICOLON  (33)
	func_call : ID . $$3 '(' ')' SEMICOLON  (35)
	expression : ID . assign_symbol or_expression  (44)
	simple_expression : ID .  (78)
	$$2 : .  (32)
	$$3 : .  (34)

	ADDASGN  shift 50
	SUBASGN  shift 51
	MULASGN  shift 52
	DIVASGN  shift 53
	MODASGN  shift 54
	'='  shift 55
	SEMICOLON  reduce 78
	INC  reduce 78
	DEC  reduce 78
	MTE  reduce 78
	LTE  reduce 78
	EQ  reduce 78
	NE  reduce 78
	AND  reduce 78
	OR  reduce 78
	'('  reduce 32
	'>'  reduce 78
	'<'  reduce 78
	'+'  reduce 78
	'-'  reduce 78
	'*'  reduce 78
	'/'  reduce 78
	'%'  reduce 78

	$$2  goto 56
	$$3  goto 57
	assign_symbol  goto 58


state 18
	const : '"' . STR_CONST '"'  (84)

	STR_CONST  shift 59
	.  error


state 19
	$accept : program . $end  (0)
	program : program . transition  (1)

	$end  accept
	PRINT  shift 1
	IF  shift 2
	WHILE  shift 3
	RETURN  shift 4
	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	VOID  shift 12
	INT  shift 13
	FLOAT  shift 14
	BOOL  shift 15
	STRING  shift 16
	ID  shift 17
	'"'  shift 18
	.  error

	stat  goto 20
	type  goto 21
	transition  goto 60
	func  goto 23
	declaration  goto 24
	loop  goto 25
	expression_stat  goto 26
	return_stat  goto 27
	print_func  goto 28
	select  goto 29
	func_call  goto 30
	or_expression  goto 31
	expression  goto 32
	and_expression  goto 33
	equal_expression  goto 34
	relation_expression  goto 35
	add_expression  goto 36
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 20
	transition : stat .  (4)

	.  reduce 4


state 21
	func : type . ID '(' argument_list ')' compound_stat  (5)
	func : type . ID '(' ')' compound_stat  (6)
	func : type . ID '(' argument_list ')' SEMICOLON  (7)
	func : type . ID '(' ')' SEMICOLON  (8)
	declaration : type . ID '=' initialzer SEMICOLON  (79)
	declaration : type . ID SEMICOLON  (80)

	ID  shift 61
	.  error


state 22
	program : transition .  (2)

	.  reduce 2


state 23
	transition : func .  (3)

	.  reduce 3


state 24
	stat : declaration .  (25)

	.  reduce 25


state 25
	stat : loop .  (26)

	.  reduce 26


state 26
	stat : expression_stat .  (27)

	.  reduce 27


state 27
	stat : return_stat .  (28)

	.  reduce 28


state 28
	stat : print_func .  (29)

	.  reduce 29


state 29
	stat : select .  (30)

	.  reduce 30


state 30
	stat : func_call .  (31)

	.  reduce 31


state 31
	expression : or_expression .  (43)
	or_expression : or_expression . OR and_expression  (52)

	OR  shift 62
	SEMICOLON  reduce 43
	')'  reduce 43


state 32
	expression_stat : expression . SEMICOLON  (39)

	SEMICOLON  shift 63
	.  error


state 33
	or_expression : and_expression .  (51)
	and_expression : and_expression . AND equal_expression  (54)

	AND  shift 64
	SEMICOLON  reduce 51
	OR  reduce 51
	')'  reduce 51
	','  reduce 51


state 34
	and_expression : equal_expression .  (53)
	equal_expression : equal_expression . EQ relation_expression  (56)
	equal_expression : equal_expression . NE relation_expression  (57)

	EQ  shift 65
	NE  shift 66
	SEMICOLON  reduce 53
	AND  reduce 53
	OR  reduce 53
	')'  reduce 53
	','  reduce 53


state 35
	equal_expression : relation_expression .  (55)
	relation_expression : relation_expression . '>' add_expression  (59)
	relation_expression : relation_expression . '<' add_expression  (60)
	relation_expression : relation_expression . MTE add_expression  (61)
	relation_expression : relation_expression . LTE add_expression  (62)

	MTE  shift 67
	LTE  shift 68
	'>'  shift 69
	'<'  shift 70
	SEMICOLON  reduce 55
	EQ  reduce 55
	NE  reduce 55
	AND  reduce 55
	OR  reduce 55
	')'  reduce 55
	','  reduce 55


state 36
	relation_expression : add_expression .  (58)
	add_expression : add_expression . '+' multi_expression  (64)
	add_expression : add_expression . '-' multi_expression  (65)

	'+'  shift 71
	'-'  shift 72
	SEMICOLON  reduce 58
	MTE  reduce 58
	LTE  reduce 58
	EQ  reduce 58
	NE  reduce 58
	AND  reduce 58
	OR  reduce 58
	')'  reduce 58
	','  reduce 58
	'>'  reduce 58
	'<'  reduce 58


state 37
	add_expression : multi_expression .  (63)
	multi_expression : multi_expression . '*' unary_expression  (67)
	multi_expression : multi_expression . '/' unary_expression  (68)
	multi_expression : multi_expression . '%' unary_expression  (69)

	'*'  shift 73
	'/'  shift 74
	'%'  shift 75
	SEMICOLON  reduce 63
	MTE  reduce 63
	LTE  reduce 63
	EQ  reduce 63
	NE  reduce 63
	AND  reduce 63
	OR  reduce 63
	')'  reduce 63
	','  reduce 63
	'>'  reduce 63
	'<'  reduce 63
	'+'  reduce 63
	'-'  reduce 63


state 38
	multi_expression : unary_expression .  (66)

	.  reduce 66


state 39
	unary_expression : postfix_expression .  (70)
	postfix_expression : postfix_expression . INC  (75)
	postfix_expression : postfix_expression . DEC  (76)

	INC  shift 76
	DEC  shift 77
	SEMICOLON  reduce 70
	MTE  reduce 70
	LTE  reduce 70
	EQ  reduce 70
	NE  reduce 70
	AND  reduce 70
	OR  reduce 70
	')'  reduce 70
	','  reduce 70
	'>'  reduce 70
	'<'  reduce 70
	'+'  reduce 70
	'-'  reduce 70
	'*'  reduce 70
	'/'  reduce 70
	'%'  reduce 70


state 40
	postfix_expression : simple_expression .  (74)

	.  reduce 74


state 41
	simple_expression : const .  (77)

	.  reduce 77


state 42
	print_func : PRINT '(' . ID $$4 ')' SEMICOLON  (88)
	print_func : PRINT '(' . '"' STR_CONST '"' ')' SEMICOLON  (89)

	ID  shift 78
	'"'  shift 79
	.  error


state 43
	select : IF '(' . expression ')' compound_stat  (41)
	select : IF '(' . expression ')' compound_stat ELSE compound_stat  (42)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 80
	'"'  shift 18
	.  error

	or_expression  goto 31
	expression  goto 81
	and_expression  goto 33
	equal_expression  goto 34
	relation_expression  goto 35
	add_expression  goto 36
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 44
	loop : WHILE '(' . expression ')' compound_stat  (40)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 80
	'"'  shift 18
	.  error

	or_expression  goto 31
	expression  goto 82
	and_expression  goto 33
	equal_expression  goto 34
	relation_expression  goto 35
	add_expression  goto 36
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 45
	simple_expression : ID .  (78)

	.  reduce 78


state 46
	return_stat : RETURN or_expression . SEMICOLON  (38)
	or_expression : or_expression . OR and_expression  (52)

	SEMICOLON  shift 83
	OR  shift 62
	.  error


state 47
	unary_expression : INC unary_expression .  (71)

	.  reduce 71


state 48
	unary_expression : DEC unary_expression .  (72)

	.  reduce 72


state 49
	unary_expression : NOT unary_expression .  (73)

	.  reduce 73


state 50
	assign_symbol : ADDASGN .  (46)

	.  reduce 46


state 51
	assign_symbol : SUBASGN .  (47)

	.  reduce 47


state 52
	assign_symbol : MULASGN .  (48)

	.  reduce 48


state 53
	assign_symbol : DIVASGN .  (49)

	.  reduce 49


state 54
	assign_symbol : MODASGN .  (50)

	.  reduce 50


state 55
	assign_symbol : '=' .  (45)

	.  reduce 45


state 56
	func_call : ID $$2 . '(' para_list ')' SEMICOLON  (33)

	'('  shift 84
	.  error


state 57
	func_call : ID $$3 . '(' ')' SEMICOLON  (35)

	'('  shift 85
	.  error


state 58
	expression : ID assign_symbol . or_expression  (44)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	or_expression  goto 86
	and_expression  goto 33
	equal_expression  goto 34
	relation_expression  goto 35
	add_expression  goto 36
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 59
	const : '"' STR_CONST . '"'  (84)

	'"'  shift 87
	.  error


state 60
	program : program transition .  (1)

	.  reduce 1


state 61
	func : type ID . '(' argument_list ')' compound_stat  (5)
	func : type ID . '(' ')' compound_stat  (6)
	func : type ID . '(' argument_list ')' SEMICOLON  (7)
	func : type ID . '(' ')' SEMICOLON  (8)
	declaration : type ID . '=' initialzer SEMICOLON  (79)
	declaration : type ID . SEMICOLON  (80)

	SEMICOLON  shift 88
	'('  shift 89
	'='  shift 90
	.  error


state 62
	or_expression : or_expression OR . and_expression  (52)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	and_expression  goto 91
	equal_expression  goto 34
	relation_expression  goto 35
	add_expression  goto 36
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 63
	expression_stat : expression SEMICOLON .  (39)

	.  reduce 39


state 64
	and_expression : and_expression AND . equal_expression  (54)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	equal_expression  goto 92
	relation_expression  goto 35
	add_expression  goto 36
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 65
	equal_expression : equal_expression EQ . relation_expression  (56)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	relation_expression  goto 93
	add_expression  goto 36
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 66
	equal_expression : equal_expression NE . relation_expression  (57)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	relation_expression  goto 94
	add_expression  goto 36
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 67
	relation_expression : relation_expression MTE . add_expression  (61)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	add_expression  goto 95
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 68
	relation_expression : relation_expression LTE . add_expression  (62)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	add_expression  goto 96
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 69
	relation_expression : relation_expression '>' . add_expression  (59)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	add_expression  goto 97
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 70
	relation_expression : relation_expression '<' . add_expression  (60)

	INC  shift 5
	DEC  shift 6
	NOT  shift 7
	I_CONST  shift 8
	F_CONST  shift 9
	TRUE  shift 10
	FALSE  shift 11
	ID  shift 45
	'"'  shift 18
	.  error

	add_expression  goto 98
	multi_expression  goto 37
	unary_expression  goto 38
	postfix_expression  goto 39
	simple_expression  goto 40
	const  goto 41


state 71
	add_expression : add_expression '+' . multi_expression  (64)
